KeepassDX (2.5.0.0beta26)
 * Download attachments
 * Change file size string format
 * Prevent screenshot for all screen
 * Fix crash when clearing clipboard
 * Fix attachments compressions
 * Fix dates
 * Fix UUID message for Database v1

KeepassDX (2.5.0.0beta25)
 * Setting for Recycle Bin
 * Fix Recycle bin issues
 * Fix TOTP
 * Fix infinite save
 * Fix update group
 * Fix OOM

KeepassDX (2.5.0.0beta24)
 * Add OTP (HOTP / TOTP)
 * Add settings (Color, Security, Master Key)
 * Show history of each entry
 * Auto repair database for nodes with same UUID
 * Management of expired nodes
 * Multi-selection for actions (Cut - Copy - Delete)
 * Open/Save database as service / Add persistent notification
 * Fix settings / edit group / small bugs

KeepassDX (2.5.0.0beta23)
 * New, more secure database creation workflow
 * Recognize more database files
 * Add alias for history files (WARNING: history is erased)
 * New Biometric unlock (Fingerprint with new API)
 * Fix entry references
 * Fix OOM with KeyFile
 * Fix small issues

KeepassDX (2.5.0.0beta22)
 * Rebuild code for actions
 * Add UUID as entry view
 * Fix bug with natural order
 * Fix number of entries in databaseV1
 * New entry views

KeepassDX (2.5.0.0beta21)
 * Fix nested groups no longer visible in V1 databases
 * Improved data import algorithm for V1 databases
 * Add natural database sort
 * Add username database sort
 * Fix button disabled with only KeyFile
 * Show the number of entries in a group

KeepassDX (2.5.0.0beta20)
 * Fix a major bug that displays an entry history

KeepassDX (2.5.0.0beta19)
 * Add lock button always visible
 * New connection workflow
 * Code refactored in Kotlin
 * Better notification implementation
 * Better views for large screen
 * Magikeyboard enhancement
 * Fix Recycle Bin
 * Fix memory when load database
 * Fix small bugs

KeepassDX (2.5.0.0beta18)
 * New recent databases views
 * New information dialog
 * Custom fields for the Magikeyboard
 * Timeout for the Magikeyboard