@@ -1,6 +1,7 @@
  * Download attachments
  * Change file size string format
  * Prevent screenshot for all screen
+ * Auto performed "Go" key in Magikeyboard
  * Fix crash when clearing clipboard
  * Fix attachments compressions
  * Fix dates
