@@ -1,6 +1,7 @@
  * Téléchargement des fichiers joints
  * Changement du texte de format de fichiers
  * Empêche la capture pour tous les écrans
+ * Touche "Go" exécutée automatiquement dans Magikeyboard
  * Correction du crash pendant le vidage du presse-papiers
  * Correction des compressions des fichiers joints
  * Correction des dates
